--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,13 @@
 // Colors
+$dark-grey: #333;
+$grey: #666;
+$purple: #b834ec;
+$dark-purple: rgb(137, 27, 211);
+$white: #f7f7f7;
+
+// Font-sizes
+$font-size-small: 1.4rem;
+$font-size-large: 2rem;
 
 // Spacing
 $s-size: 1.2rem;
